; ModuleID = '/home/carl/AnghaBench/reactos/dll/win32/cryptui/extr_main.c_add_known_usage.c'
source_filename = "/home/carl/AnghaBench/reactos/dll/win32/cryptui/extr_main.c_add_known_usage.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_4__ = type { i64 }
%struct.TYPE_5__ = type { i32, i64, i64, i64, i32, i32, i32 }

@LVIF_TEXT = common dso_local global i32 0, align 4
@LVIF_STATE = common dso_local global i32 0, align 4
@LVIF_PARAM = common dso_local global i32 0, align 4
@LVIS_STATEIMAGEMASK = common dso_local global i32 0, align 4
@LVM_GETITEMCOUNT = common dso_local global i32 0, align 4
@LVM_INSERTITEMW = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32, %struct.TYPE_4__*, i32)* @add_known_usage to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @add_known_usage(i32 %0, %struct.TYPE_4__* %1, i32 %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca %struct.TYPE_4__*, align 8
  %6 = alloca i32, align 4
  %7 = alloca %struct.TYPE_5__, align 8
  store i32 %0, i32* %4, align 4
  store %struct.TYPE_4__* %1, %struct.TYPE_4__** %5, align 8
  store i32 %2, i32* %6, align 4
  %8 = load i32, i32* @LVIF_TEXT, align 4
  %9 = load i32, i32* @LVIF_STATE, align 4
  %10 = or i32 %8, %9
  %11 = load i32, i32* @LVIF_PARAM, align 4
  %12 = or i32 %10, %11
  %13 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %7, i32 0, i32 0
  store i32 %12, i32* %13, align 8
  %14 = load i32, i32* %6, align 4
  %15 = call i32 @INDEXTOSTATEIMAGEMASK(i32 %14)
  %16 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %7, i32 0, i32 6
  store i32 %15, i32* %16, align 8
  %17 = load i32, i32* @LVIS_STATEIMAGEMASK, align 4
  %18 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %7, i32 0, i32 5
  store i32 %17, i32* %18, align 4
  %19 = load i32, i32* %4, align 4
  %20 = load i32, i32* @LVM_GETITEMCOUNT, align 4
  %21 = call i32 @SendMessageW(i32 %19, i32 %20, i32 0, i64 0)
  %22 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %7, i32 0, i32 4
  store i32 %21, i32* %22, align 8
  %23 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %7, i32 0, i32 3
  store i64 0, i64* %23, align 8
  %24 = load %struct.TYPE_4__*, %struct.TYPE_4__** %5, align 8
  %25 = ptrtoint %struct.TYPE_4__* %24 to i64
  %26 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %7, i32 0, i32 2
  store i64 %25, i64* %26, align 8
  %27 = load %struct.TYPE_4__*, %struct.TYPE_4__** %5, align 8
  %28 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %27, i32 0, i32 0
  %29 = load i64, i64* %28, align 8
  %30 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %7, i32 0, i32 1
  store i64 %29, i64* %30, align 8
  %31 = load i32, i32* %4, align 4
  %32 = load i32, i32* @LVM_INSERTITEMW, align 4
  %33 = ptrtoint %struct.TYPE_5__* %7 to i64
  %34 = call i32 @SendMessageW(i32 %31, i32 %32, i32 0, i64 %33)
  ret void
}

declare dso_local i32 @INDEXTOSTATEIMAGEMASK(i32) #1

declare dso_local i32 @SendMessageW(i32, i32, i32, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
